--- a/build.gradle
+++ b/build.gradle
@@ -10,5 +10,10 @@ repositories {
 }
 
 dependencies {
+    implementation 'org.junit.jupiter:junit-jupiter:5.4.2'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+}
+
+test{
+    useJUnitPlatform()
 }
