--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,8 @@
 language: java
 script:
   - gradle clean test
+  
+notifications:
+    webhooks: https://www.travisbuddy.com/
+    on_success: never
+    on_failure: always
