--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -18,7 +18,16 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 12
-    - name: Google Java format
+    - name: Gooogle Java Formatter
       run: |
         wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O formatter.jar
         java -jar formatter.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
+    - name: Commit formatted changes
+        if: failure()
+        run: |
+          black .
+          git config --global user.name github-actions
+          git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git commit -am "Formatted with Google Java Format"
+          git push --force origin HEAD:$GITHUB_REF
