--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -18,9 +18,11 @@ jobs:
       uses: actions/setup-java@v1
       with:
         java-version: 12
-    - name: Google Java Format
-        run: |
-          ls
-          wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O format.jar
-          java -jar format.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
-          git diff
+    - name: Format
+      run: ls
+#    - name: dfsdf
+#        run: |
+#          ls
+#          wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O format.jar
+#          java -jar format.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
+#          git diff
