--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -18,20 +18,15 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 12
-      - name: Format
-        run: |
+      - run: |
           wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O format.jar
           ls
           java -jar format.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
-      - if: failure()
+      - name: Commit black changes
+        if: failure()
         run: |
-          echo "format success"
+          echo "success"
           git diff
-#      - name: Commit black changes
-#        if: failure()
-#        run: |
-#          echo "success"
-#          git diff
 #          black .
 #          git config --global user.name github-actions
 #          git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
