--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -27,9 +27,8 @@ jobs:
         run: |
           echo "success"
           git diff
-#          black .
-#          git config --global user.name github-actions
-#          git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
-#          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-#          git commit -am "Formatted with psf/black"
-#          git push --force origin HEAD:$GITHUB_REF
+          git config --global user.name github-actions
+          git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git commit -am "Formatted with psf/black"
+          git push --force origin HEAD:$GITHUB_REF
