--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -25,10 +25,8 @@ jobs:
       - name: Commit black changes
         if: failure()
         run: |
-          echo "success"
-          git diff
           git config --global user.name github-actions
           git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
           git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git commit -am "Formatted with psf/black"
+          git commit -am "Formatted with Google Java Formatter"
           git push --force origin HEAD:$GITHUB_REF
