--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -18,15 +18,16 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 12
-      - run: |
-          wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O format.jar
-          ls
-          java -jar format.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
-      - name: Commit black changes
-        if: failure()
+      - name: Gooogle Java Formatter
         run: |
-          git config --global user.name github-actions
-          git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
-          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-          git commit -am "Formatted with Google Java Formatter"
-          git push --force origin HEAD:$GITHUB_REF || true
+          wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O formatter.jar
+          java -jar formatter.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
+          git diff
+      - name: Commit formatted changes
+          if: failure()
+          run: |
+            git config --global user.name github-actions
+            git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
+            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+            git commit -am "Formatted with Google Java Format"
+            git push --force origin dev
