--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,33 +1,24 @@
-# https://github.com/google/google-java-format
-name: Google Java Format
+name: Code Formatter
 
-on:
-  push:
-    branches: [ master ]
-  pull_request:
-    branches: [ master ]
+on: [push, pull_request]
 
 jobs:
-  build:
-
+  lint:
     runs-on: ubuntu-latest
-
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/setup-python@v2
       - name: Set up JDK 12
         uses: actions/setup-java@v1
         with:
           java-version: 12
-      - name: Gooogle Java Formatter
+      - run: wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O formatter.jar
+      - run: java -jar formatter.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
+      - name: Commit black changes
+        if: failure()
         run: |
-          wget https://github.com/google/google-java-format/releases/download/google-java-format-1.9/google-java-format-1.9-all-deps.jar -O formatter.jar
-          java -jar formatter.jar --replace --set-exit-if-changed $(find . -type f -name "*.java" | grep ".*/src/.*java")
-          git diff
-      - name: Commit formatted changes
-          if: failure()
-          run: |
-            git config --global user.name github-actions
-            git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
-            git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
-            git commit -am "Formatted with Google Java Format"
-            git push --force origin dev
+          git config --global user.name github-actions
+          git config --global user.email '${GITHUB_ACTOR}@users.noreply.github.com'
+          git remote set-url origin https://x-access-token:${{ secrets.GITHUB_TOKEN }}@github.com/$GITHUB_REPOSITORY
+          git commit -am "Formatted with psf/black"
+          git push --force origin HEAD:$GITHUB_REF
