--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -3,7 +3,7 @@ name: Code Formatter
 on: [push]
 
 jobs:
-  lint:
+  checkstyle:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
