update google formatter

--- a/.github/workflows/checkstyle.yml
+++ b/.github/workflows/checkstyle.yml
@@ -1,6 +1,9 @@
 name: Code Formatter
-
-on: [push, pull_request]
+on:
+  push:
+    branches: [master]
+    paths:
+      - "**.java"
 
 jobs:
   checkstyle:
